--- a/pom.xml
+++ b/pom.xml
@@ -170,32 +170,18 @@
 
             <!-- PDF -->
             <dependency>
-                <groupId>com.itextpdf</groupId>
-                <artifactId>itext7-core</artifactId>
-                <version>7.1.12</version>
-                <type>pom</type>
-            </dependency>
-
-            <dependency>
-                <groupId>com.itextpdf</groupId>
-                <artifactId>itext-asian</artifactId>
-                <version>5.2.0</version>
-                <optional>true</optional>
-            </dependency>
-
-            <dependency>
                 <groupId>technology.tabula</groupId>
                 <artifactId>tabula</artifactId>
                 <version>1.0.5</version>
                 <optional>true</optional>
-                <exclusions>
-                    <exclusion>
-                        <artifactId>slf4j-simple</artifactId>
-                        <groupId>org.slf4j</groupId>
-                    </exclusion>
-                </exclusions>
             </dependency>
 
+            <dependency>
+                <groupId>com.github.vandeseer</groupId>
+                <artifactId>easytable</artifactId>
+                <version>0.8.5</version>
+                <optional>true</optional>
+            </dependency>
             <dependency>
                 <groupId>javax.validation</groupId>
                 <artifactId>validation-api</artifactId>
